--- a/app/src/main/res/values-ru-rRU/colors.xml
+++ b/app/src/main/res/values-ru-rRU/colors.xml
@@ -7,6 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="move">#ff0000</color>
-    <color name="background">#bbbbbb</color>
+    <color name="move">#0000ff</color>
 </resources>
